--- a/Aula 2/anotações.html
+++ b/Aula 2/anotações.html
@@ -8,10 +8,11 @@
 <!--    VARIAVEIS
 
     <Para criar uma variavel, é necessario usar o var, let ou const antes>
-    <Var é uma variavel comum>
-    <Let é uma variavel utilizada dentro de um funçao>
-    <Const é uma variavel constante, onde o conteudo nao pode ser editado>
-    <indentificador de variavel é o apelido dado a ela>
+    <Var é uma variavel que pode vazar do escopo>
+    <Let é uma variavel que nao sai do escopo>
+    <Const é uma variavel onde seu conteudo sera fixo no escopo>
+        
+    <indentificador de variavel é o apelido dado a a variavel>
     <Os indentificadores podem começar com letras, $ ou _ >
     <Nao podem começar com numeros>
     <É possivel usar acentos e simbolos> 
